# 2_ALGOS_ALV-Tree

./: CMakeLists.txt  IMPORT-DATA1.txt  IMPORT-DATA2.txt  IMPORT-DATA3.txt  IMPORT-DATA4.txt  IMPORT-DATA5.txt  IMPORT-DATA_Subtree2false.txt  IMPORT-DATA_Subtree2true.txt  IMPORT-DATA_unbalanced1.txt  IMPORT-DATA_unbalanced2.txt
avltree/: AVLManager.cpp  AVLManager.hpp  Display.cpp  Display.hpp  Holder.cpp  Holder.hpp  Menu.cpp  Menu.hpp  Node.cpp  Node.hpp  main.cpp
